# pruning_llms

./: diagnose_model.py  example_huggingface.py  genetic_pruning.py  llm_sieve.py  transformer_pruner.py  tutorial.py
REAP_OSS/: LICENSE  README.md  __init__.py  basic_pruning.py  compare_methods.py  data.py  main.py  model_util.py  mxfp4.py  observer.py  prune.py  prune_gptoss.sh  pyproject.toml  test_prune.py
sieve/: README.md  __init__.py  core.py  diagnose.py  example.py  genetic.py  layer_discovery.py  pruner.py  requirements.txt
