[project]
name = "reap-gptoss"
version = "0.1.0"
description = "REAP Expert Pruning adapted for OpenAI GPT-OSS models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Adapted from CerebrasResearch/reap"}
]
keywords = [
    "llm",
    "moe",
    "mixture-of-experts",
    "pruning",
    "compression",
    "gpt-oss",
    "reap",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
eval = [
    "lm-eval>=0.4.0",
    "vllm>=0.4.0",
]
full = [
    "reap-gptoss[dev,eval]",
]

[project.scripts]
reap-gptoss = "reap_gptoss.main:main"

[project.urls]
"Original REAP" = "https://github.com/CerebrasResearch/reap"
"GPT-OSS" = "https://github.com/openai/gpt-oss"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reap_gptoss"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=reap_gptoss"
